# structures

./: .gitignore  CHANGELOG.md  README.md  ctags  default.nix  structures.cabal
nix/: overrides.nix
src/: Structures.hs
src/Structures/: Heap.hs  SuffixArray.chs  SuffixArray.hs
