cabal-version: 2.2
name:
  structures
version:
  0.1
synopsis:
  data structures megalibrary (haskell)
description:
  data structures megalibrary (haskell)
homepage:
  https://github.com/chessai/structures
bug-reports:
  https://github.com/chessai/structures/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Structures
    Structures.SuffixArray
  build-depends:
    , base >= 4.10.1 && < 4.13
    , bytestring >= 0.10 && < 0.11
    , primitive >= 0.7 && < 0.8
    , contiguous >= 0.4.0.1 && < 0.5
    , primitive-sort >= 0.1 && < 0.2
    , ghc-prim
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010
  c-sources:
    cbits/sais.c
  include-dirs:
    include/
  build-tools:
    c2hs

source-repository head
  type:
    git
  location:
    https://github.com/chessai/structures.git
